--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68944,6 +68944,7 @@ server=/pengrui-ssj.com/114.114.114.114
 server=/pengshancy.com/114.114.114.114
 server=/pengshengcaishui.com/114.114.114.114
 server=/penguin-logistics.space/114.114.114.114
+server=/pengxinziyuan.com/114.114.114.114
 server=/pengyaou.com/114.114.114.114
 server=/pengyihotel.com/114.114.114.114
 server=/pengyou.com/114.114.114.114
