--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93961,6 +93961,7 @@ server=/xiaomi.net/114.114.114.114
 server=/xiaomi.org/114.114.114.114
 server=/xiaomi.tw/114.114.114.114
 server=/xiaomiaozai.com/114.114.114.114
+server=/xiaomibbs.com/114.114.114.114
 server=/xiaomicache.com/114.114.114.114
 server=/xiaomicorp.com/114.114.114.114
 server=/xiaomicorp.net/114.114.114.114
