--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31564,6 +31564,7 @@ server=/fatangmedia.com/114.114.114.114
 server=/fatbobman.com/114.114.114.114
 server=/fateadm.com/114.114.114.114
 server=/fatedier.com/114.114.114.114
+server=/fateqi.com/114.114.114.114
 server=/fatfreader.com/114.114.114.114
 server=/fatherai.com/114.114.114.114
 server=/fatiao.pro/114.114.114.114
