--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30714,6 +30714,7 @@ server=/etyy.com/114.114.114.114
 server=/etyyy.com/114.114.114.114
 server=/etz927.com/114.114.114.114
 server=/etzj.net/114.114.114.114
+server=/etzqw.com/114.114.114.114
 server=/etzzy.com/114.114.114.114
 server=/eu4cn.com/114.114.114.114
 server=/eub-inc.com/114.114.114.114
