--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61276,6 +61276,7 @@ server=/mbazl.com/114.114.114.114
 server=/mbb0760.com/114.114.114.114
 server=/mbb180.com/114.114.114.114
 server=/mbbrowser.com/114.114.114.114
+server=/mbbs.cc/114.114.114.114
 server=/mbcloud.com/114.114.114.114
 server=/mbd.pub/114.114.114.114
 server=/mbgo.com/114.114.114.114
