--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6613,6 +6613,7 @@ server=/66nh.com/114.114.114.114
 server=/66perfect.com/114.114.114.114
 server=/66play.com/114.114.114.114
 server=/66rjz.com/114.114.114.114
+server=/66rom.com/114.114.114.114
 server=/66rou.com/114.114.114.114
 server=/66rpg.com/114.114.114.114
 server=/66ruian.com/114.114.114.114
