--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84505,6 +84505,7 @@ server=/tiyufeng.com/114.114.114.114
 server=/tiyuguoji.com/114.114.114.114
 server=/tiyule.com/114.114.114.114
 server=/tiyusaishi.com/114.114.114.114
+server=/tiyushe.com/114.114.114.114
 server=/tiyuxiu.com/114.114.114.114
 server=/tizi.com/114.114.114.114
 server=/tizi365.com/114.114.114.114
