--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84787,6 +84787,7 @@ server=/tmxxw.com/114.114.114.114
 server=/tn2000.com/114.114.114.114
 server=/tnarzc.com/114.114.114.114
 server=/tnblog.net/114.114.114.114
+server=/tnblt.com/114.114.114.114
 server=/tnbz.com/114.114.114.114
 server=/tnccdn.com/114.114.114.114
 server=/tnedu.com/114.114.114.114
