--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10361,6 +10361,7 @@ server=/aishenhua.com/114.114.114.114
 server=/aishiguolong.com/114.114.114.114
 server=/aishuge.cc/114.114.114.114
 server=/aishuge.la/114.114.114.114
+server=/aishukong.com/114.114.114.114
 server=/aishushu3.com/114.114.114.114
 server=/aisidi.com/114.114.114.114
 server=/aisila.com/114.114.114.114
