--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83340,6 +83340,7 @@ server=/td98.com/114.114.114.114
 server=/tdances.com/114.114.114.114
 server=/tdatamaster.com/114.114.114.114
 server=/tdbbj.com/114.114.114.114
+server=/tdbbs.net/114.114.114.114
 server=/tdchats.us/114.114.114.114
 server=/tdchatvip.us/114.114.114.114
 server=/tddmp.com/114.114.114.114
