--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22279,6 +22279,7 @@ server=/cnbaowen.net/114.114.114.114
 server=/cnbct.org/114.114.114.114
 server=/cnbeinuo.com/114.114.114.114
 server=/cnbetacdn.com/114.114.114.114
+server=/cnbian.com/114.114.114.114
 server=/cnbidding.com/114.114.114.114
 server=/cnbiocell.com/114.114.114.114
 server=/cnbis.com/114.114.114.114
