--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27013,6 +27013,7 @@ server=/dingliangame.com/114.114.114.114
 server=/dinglianhuanbao.com/114.114.114.114
 server=/dinglipin.net/114.114.114.114
 server=/dinglongjx.com/114.114.114.114
+server=/dinglou.com/114.114.114.114
 server=/dinglutang.com/114.114.114.114
 server=/dingoa.com/114.114.114.114
 server=/dingqiaoks.com/114.114.114.114
