--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19508,6 +19508,7 @@ server=/cheapreplicawatch.com/114.114.114.114
 server=/cheapviagraws.com/114.114.114.114
 server=/cheapyou.com/114.114.114.114
 server=/cheari.com/114.114.114.114
+server=/cheatmaker.org/114.114.114.114
 server=/chebaba.com/114.114.114.114
 server=/chebada.com/114.114.114.114
 server=/chebaipishu.com/114.114.114.114
