--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42803,6 +42803,7 @@ server=/hiconics-zn.com/114.114.114.114
 server=/hicoo.net/114.114.114.114
 server=/hicosmo.com/114.114.114.114
 server=/hicp.net/114.114.114.114
+server=/hicsharp.com/114.114.114.114
 server=/hicss.net/114.114.114.114
 server=/hiczp.com/114.114.114.114
 server=/hidery.com/114.114.114.114
