--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19439,6 +19439,7 @@ server=/charge-mobile.com/114.114.114.114
 server=/chargedot.com/114.114.114.114
 server=/chargerlab.com/114.114.114.114
 server=/chargerlink.com/114.114.114.114
+server=/charlsdata.com/114.114.114.114
 server=/charmdeer.com/114.114.114.114
 server=/charmingglobe.com/114.114.114.114
 server=/charmkeytextile.com/114.114.114.114
