--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83943,6 +83943,7 @@ server=/theytree.com/114.114.114.114
 server=/theyun.com/114.114.114.114
 server=/thfdc.net/114.114.114.114
 server=/thfdcsoft.com/114.114.114.114
+server=/thffc.com/114.114.114.114
 server=/thgkyy.com/114.114.114.114
 server=/thhome.net/114.114.114.114
 server=/thhymj.com/114.114.114.114
