--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105425,6 +105425,7 @@ server=/zobmxcfw.com/114.114.114.114
 server=/zocai.com/114.114.114.114
 server=/zocolor.com/114.114.114.114
 server=/zocoxx.com/114.114.114.114
+server=/zodgame.me/114.114.114.114
 server=/zoe360.com/114.114.114.114
 server=/zoebon.com/114.114.114.114
 server=/zoeess.com/114.114.114.114
