--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65465,6 +65465,7 @@ server=/nicotine.vip/114.114.114.114
 server=/nics365.com/114.114.114.114
 server=/nicsbuy.com/114.114.114.114
 server=/nicwind.com/114.114.114.114
+server=/nidecms.com/114.114.114.114
 server=/nidekash.com/114.114.114.114
 server=/nidiandaojia.com/114.114.114.114
 server=/nie.io/114.114.114.114
