--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83002,6 +83002,7 @@ server=/tao-wu.com/114.114.114.114
 server=/tao008.com/114.114.114.114
 server=/tao1.co/114.114.114.114
 server=/tao123.com/114.114.114.114
+server=/tao37.com/114.114.114.114
 server=/tao800.com/114.114.114.114
 server=/tao8090.com/114.114.114.114
 server=/taoa.com/114.114.114.114
