--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13912,6 +13912,7 @@ server=/bctmo.com/114.114.114.114
 server=/bctts.com/114.114.114.114
 server=/bctw3f.xyz/114.114.114.114
 server=/bcty365.com/114.114.114.114
+server=/bcunr.com/114.114.114.114
 server=/bcvbw.com/114.114.114.114
 server=/bcvdmovie.com/114.114.114.114
 server=/bcwangluo.net/114.114.114.114
