--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19341,6 +19341,7 @@ server=/changshiwang.com/114.114.114.114
 server=/changshizu.com/114.114.114.114
 server=/changshu-marathon.com/114.114.114.114
 server=/changshunhuojia.com/114.114.114.114
+server=/changshuohr.net/114.114.114.114
 server=/changtong2800.com/114.114.114.114
 server=/changtounet.com/114.114.114.114
 server=/changtubus.com/114.114.114.114
