--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23279,6 +23279,7 @@ server=/comingchina.com/114.114.114.114
 server=/comlan.com/114.114.114.114
 server=/comlbs.com/114.114.114.114
 server=/commander1.com/114.114.114.114
+server=/commandersact.com/114.114.114.114
 server=/commchina.net/114.114.114.114
 server=/commedcell.com/114.114.114.114
 server=/communicatte.com/114.114.114.114
