--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50555,6 +50555,7 @@ server=/jianli88.com/114.114.114.114
 server=/jianliao.com/114.114.114.114
 server=/jianliben.com/114.114.114.114
 server=/jianliduo.com/114.114.114.114
+server=/jianlika.com/114.114.114.114
 server=/jianlisheji.com/114.114.114.114
 server=/jianlixiu.com/114.114.114.114
 server=/jianliyuan.com/114.114.114.114
