--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55294,6 +55294,7 @@ server=/kohergroup.com/114.114.114.114
 server=/koiclub.net/114.114.114.114
 server=/koikreative.com/114.114.114.114
 server=/koinocn.com/114.114.114.114
+server=/koioawq.com/114.114.114.114
 server=/kojtech.com/114.114.114.114
 server=/kok.plus/114.114.114.114
 server=/kokojia.com/114.114.114.114
