--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62355,6 +62355,7 @@ server=/microsate.com/114.114.114.114
 server=/microsoft-ware.com/114.114.114.114
 server=/microsoftuwp.com/114.114.114.114
 server=/microstern.com/114.114.114.114
+server=/microsword.net/114.114.114.114
 server=/microtrading.com/114.114.114.114
 server=/microvcard.com/114.114.114.114
 server=/microvirt.com/114.114.114.114
