--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67541,6 +67541,7 @@ server=/ok126.net/114.114.114.114
 server=/ok1616.com/114.114.114.114
 server=/ok165.com/114.114.114.114
 server=/ok206.com/114.114.114.114
+server=/ok365.com/114.114.114.114
 server=/ok379.com/114.114.114.114
 server=/ok3w.net/114.114.114.114
 server=/ok8867s.com/114.114.114.114
