--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83284,6 +83284,7 @@ server=/tbi-osk.com/114.114.114.114
 server=/tbjfw.com/114.114.114.114
 server=/tbjt18.com/114.114.114.114
 server=/tbjtss.com/114.114.114.114
+server=/tbk-app.com/114.114.114.114
 server=/tbkf.net/114.114.114.114
 server=/tbl-import.com/114.114.114.114
 server=/tblk.me/114.114.114.114
