--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68834,6 +68834,7 @@ server=/piaoyun.net/114.114.114.114
 server=/piaozhilan.com/114.114.114.114
 server=/piaozone.com/114.114.114.114
 server=/piasy.com/114.114.114.114
+server=/pic-png.com/114.114.114.114
 server=/pic16.com/114.114.114.114
 server=/pic21.com/114.114.114.114
 server=/pic315.com/114.114.114.114
