--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78693,6 +78693,7 @@ server=/sicuo.com/114.114.114.114
 server=/sidike.com/114.114.114.114
 server=/sidri.com/114.114.114.114
 server=/siengine.com/114.114.114.114
+server=/sienwater.com/114.114.114.114
 server=/sieredu.com/114.114.114.114
 server=/sif.com/114.114.114.114
 server=/sifalu.com/114.114.114.114
