--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60221,6 +60221,7 @@ server=/lyhomestayinn.com/114.114.114.114
 server=/lyhuadu.com/114.114.114.114
 server=/lyhx.net/114.114.114.114
 server=/lyjinaojixie.com/114.114.114.114
+server=/lyjksw.com/114.114.114.114
 server=/lyjltx.com/114.114.114.114
 server=/lyjunshi.com/114.114.114.114
 server=/lyjwatch.com/114.114.114.114
