--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93581,6 +93581,7 @@ server=/xiaoyingzhenxuan.com/114.114.114.114
 server=/xiaoyisysreset.com/114.114.114.114
 server=/xiaoyizhiqu.com/114.114.114.114
 server=/xiaoyou66.com/114.114.114.114
+server=/xiaoyouxi.co/114.114.114.114
 server=/xiaoyouxi100.com/114.114.114.114
 server=/xiaoyouxiqun.com/114.114.114.114
 server=/xiaoyouzb.net/114.114.114.114
