--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78893,6 +78893,7 @@ server=/slzsxx.com/114.114.114.114
 server=/sm-check.com/114.114.114.114
 server=/sm-cq.com/114.114.114.114
 server=/sm-main.com/114.114.114.114
+server=/sm0.fun/114.114.114.114
 server=/sm160.com/114.114.114.114
 server=/sm160.net/114.114.114.114
 server=/sm3s.com/114.114.114.114
