--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13731,6 +13731,7 @@ server=/bbk000.com/114.114.114.114
 server=/bbkantu.com/114.114.114.114
 server=/bbkys.com/114.114.114.114
 server=/bblcdn.com/114.114.114.114
+server=/bblops.com/114.114.114.114
 server=/bblskj.com/114.114.114.114
 server=/bbmuwwxyk.com/114.114.114.114
 server=/bbmy.net/114.114.114.114
