--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69638,6 +69638,7 @@ server=/precision-biz.com/114.114.114.114
 server=/preludeid.com/114.114.114.114
 server=/premedglobal.com/114.114.114.114
 server=/premft.com/114.114.114.114
+server=/presenceall.com/114.114.114.114
 server=/pressmine.com/114.114.114.114
 server=/prestodb-china.com/114.114.114.114
 server=/prestolite-bj.com/114.114.114.114
