--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98913,6 +98913,7 @@ server=/ynsyhkgs.com/114.114.114.114
 server=/ynszfw.com/114.114.114.114
 server=/ynszlyy.com/114.114.114.114
 server=/yntcbc.com/114.114.114.114
+server=/ynu.icu/114.114.114.114
 server=/ynurl.com/114.114.114.114
 server=/ynw360.com/114.114.114.114
 server=/ynwater.com/114.114.114.114
