--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47777,6 +47777,7 @@ server=/imopan.com/114.114.114.114
 server=/imosi.com/114.114.114.114
 server=/imotao.com/114.114.114.114
 server=/imotion.group/114.114.114.114
+server=/imoto.love/114.114.114.114
 server=/imou.com/114.114.114.114
 server=/imovideo.ru/114.114.114.114
 server=/imoxiu.com/114.114.114.114
