--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32068,6 +32068,7 @@ server=/fhyx.hk/114.114.114.114
 server=/fi-play.com/114.114.114.114
 server=/fi0.cc/114.114.114.114
 server=/fi11.com/114.114.114.114
+server=/fi7.cc/114.114.114.114
 server=/fi94.com/114.114.114.114
 server=/fia-china.com/114.114.114.114
 server=/fibercrops.com/114.114.114.114
