--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49913,6 +49913,7 @@ server=/jhzgwx.com/114.114.114.114
 server=/jhzhizao.com/114.114.114.114
 server=/jhzhkj.com/114.114.114.114
 server=/jhzhuji.com/114.114.114.114
+server=/jhzoo.com/114.114.114.114
 server=/jhzs.work/114.114.114.114
 server=/ji-pai.com/114.114.114.114
 server=/ji.ci/114.114.114.114
