--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33665,6 +33665,7 @@ server=/gaetausohyei.com/114.114.114.114
 server=/gafata.com/114.114.114.114
 server=/gafei.com/114.114.114.114
 server=/gafencuchina.com/114.114.114.114
+server=/gagacafe.com/114.114.114.114
 server=/gagaga.icu/114.114.114.114
 server=/gagaga.tech/114.114.114.114
 server=/gagahi.com/114.114.114.114
