--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88429,6 +88429,7 @@ server=/wangamela.com/114.114.114.114
 server=/wangan.com/114.114.114.114
 server=/wangbaobei.com/114.114.114.114
 server=/wangbixi.com/114.114.114.114
+server=/wangcai.cm/114.114.114.114
 server=/wangcaio2o.com/114.114.114.114
 server=/wangcaiwang.com/114.114.114.114
 server=/wangcanmou.com/114.114.114.114
