--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32581,6 +32581,7 @@ server=/fobaoyou.com/114.114.114.114
 server=/fobcentury.com/114.114.114.114
 server=/fobmy.com/114.114.114.114
 server=/fobshanghai.com/114.114.114.114
+server=/focaj.com/114.114.114.114
 server=/focalbrand.com/114.114.114.114
 server=/focalhot.com/114.114.114.114
 server=/focc.cc/114.114.114.114
