--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101559,6 +101559,7 @@ server=/zcpm.net/114.114.114.114
 server=/zcpzj.com/114.114.114.114
 server=/zcqh.com/114.114.114.114
 server=/zcqss.com/114.114.114.114
+server=/zcqtz.com/114.114.114.114
 server=/zcread.com/114.114.114.114
 server=/zcry007.com/114.114.114.114
 server=/zcs.cc/114.114.114.114
