--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7319,6 +7319,7 @@ server=/7tenet.net/114.114.114.114
 server=/7tgame.com/114.114.114.114
 server=/7tnt.com/114.114.114.114
 server=/7tou.com/114.114.114.114
+server=/7tqy.com/114.114.114.114
 server=/7tui.net/114.114.114.114
 server=/7ugl.com/114.114.114.114
 server=/7usa.net/114.114.114.114
